--- a/Mission Impossible.vcxproj
+++ b/Mission Impossible.vcxproj
@@ -176,6 +176,9 @@
     <ClInclude Include="Utilities.h" />
     <ClInclude Include="PCH.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
