--- a/Mission Impossible.vcxproj.filters
+++ b/Mission Impossible.vcxproj.filters
@@ -78,4 +78,7 @@
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
