--- a/Mission Impossible.vcxproj
+++ b/Mission Impossible.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="cRock.cpp" />
     <ClCompile Include="Diamond.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="GameEngine.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="cRock.h" />
     <ClInclude Include="Diamond.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="Level.h" />
     <ClInclude Include="Utilities.h" />
